--- a/style.css
+++ b/style.css
@@ -13,22 +13,98 @@ body {
   font-family: arial;
   font-style: normal;
 
-  margin-top: 30vh;
+  margin-top: 25vh;
   color: white;
   font-size: 4.5vmin;
   text-align: center;
   
 }
 .info{
-  background: black;
+  
+  background: rgb(120, 120, 120);
+  padding: 0.11em;
+  color: black;
 }
 .info_content{
-  background: rgb(100, 100, 100);
+  background: black;
+  padding: 0.1em;
+}
+.info_group{
+  margin: 0.16em;
 }
 .extras{
-  margin: 1em;
-  font-size: 3.5vmin;
+  font-size: 4vmin;
+  margin-right: 1em;
 }
-a{
+#question_mark{
+  font-size: 1.5em;
+  margin-left: 7.5em;
+  margin-bottom: 0.5em;
+  height: auto;
+  color: red;
+  animation: rotate 6s both infinite;
+  animation-timing-function: linear;
+  cursor: pointer;
+}
+@keyframes rotate {
+  0 {
+    transform: rotateY(0);
+    filter: hue-rotate(0deg); 
+  }
+  25% {
+    transform: rotateY(180deg);
+    filter: hue-rotate(90deg);
+  }
+  50% {
+    transform: rotateY(360deg);
+    filter: hue-rotate(180deg);
+  }
+  75% {
+    transform: rotateY(180deg);
+    filter: hue-rotate(270deg);
+  }
+  100% {
+    transform: rotateY(360deg);
+    filter: hue-rotate(360deg);
+  }
+}
 
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  font-family: arial;
+  font-style: normal;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
