--- a/everyperson/style.css
+++ b/everyperson/style.css
@@ -127,6 +127,8 @@ body{
   flex-wrap: wrap;
   flex-direction: column;
   position: relative;
+  overflow-x: hidden;
+  font-size: 1em;
 }
 
 /* info element for logo, text, links, appears first in the person container */
@@ -161,7 +163,7 @@ body{
 
 /*person container things ------------------------*/
 .person{
-  margin-top: calc(1%/var(--colums));;
+  margin-top: calc(1%/var(--colums));
   width:  var(--elem-width);
   height: var(--elem-height);
   cursor: pointer;
@@ -246,17 +248,17 @@ body{
   z-index: 1;
 }
 #curious_info{
-  display: none;
-  position: relative;
-  width: 95%;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  flex-direction: row;
-  align-items: center;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 2.5em;
-  margin-bottom: 1em;
+	display: none;
+	position: relative;
+	width: 95%;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	flex-direction: row;
+	align-items: center;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 2.5em;
+	margin-bottom: 1em;
 }
 .curious_exists{
   display: initial;
@@ -340,23 +342,26 @@ body{
     margin: 5vh auto;
     flex-wrap: wrap;
     font-size: 2.4vh;
-  }
+	}
   .modal_content_part{
-  flex: 100%;
-  width: 100%;
-  height: 50%;
-  }
+	  flex: 100%;
+	  width: 100%;
+	  height: 50%;
+	}
   .modal_content_part p{
-  padding: 6%;
-  }
+	  padding: 6%;
+	}
 }
 @media screen and (max-aspect-ratio: 1/2) {
   .modal_content{
     max-height: 96vh;
     margin: 2vh auto;
     font-size: 4.6vw;
-  }
+	}
 }
 @media screen and (max-width: 660px) {
-  #person_container {--colums: 2;}
+  #person_container {
+	--colums: 2;
+	font-size: 0.9em;
+	}
 }
