--- a/everyperson/style.css
+++ b/everyperson/style.css
@@ -60,10 +60,10 @@ body{
 .modal_exit{
   position: absolute;
   display: block;
-  width: 1.9rem;
-  height: 1.9rem;
-  top: 2.2%;
-  right: 2.4%; 
+  width: 1.8rem;
+  height: 1.8rem;
+  top: 2.8%;
+  right: 3%; 
   z-index: 999;
 }
 .modal_content{
@@ -86,6 +86,7 @@ body{
   width: 50%;
   z-index: 200;
   font-size: 100%;
+  mix-blend-mode: darken;
 }
 .modal_content_part .misc_img{
   display: block;
