--- a/everyperson/style.css
+++ b/everyperson/style.css
@@ -334,6 +334,7 @@ body{
 }
 @media screen and (max-width: 800px) {
   #person_container {--colums: 3;}
+  
   .modal_content{
     background-image: url("dusty-empy-spread-v.webp");
     max-height: 90vh;
@@ -341,7 +342,7 @@ body{
     aspect-ratio: 1064 / 2000;
     margin: 5vh auto;
     flex-wrap: wrap;
-    font-size: 2.3vh;
+    font-size: 2.5vh;
 	}
   .modal_content_part{
 	  flex: 100%;
@@ -353,10 +354,11 @@ body{
 	}
 }
 @media screen and (max-aspect-ratio: 1/2) {
-  .modal_content{
+  .modal_content {
     max-height: 96vh;
+	max-width: 99vw;
     margin: 2vh auto;
-    font-size: 4.3vw;
+    font-size: 4.5vw;
 	}
 }
 @media screen and (max-width: 660px) {
