--- a/a101cinema/style.css
+++ b/a101cinema/style.css
@@ -61,6 +61,9 @@ body {
 .info_group{
   margin: 0.16em;
 }
+#selection_title{
+	font-style: italic;
+}
 .extras_group{
   font-family: arial;
   font-style: normal;
